# Ado

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
scripts/: tauri-env.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  mod.rs  taskbar.rs  todo_settings.rs  todo_webdav.rs  todos.rs  window.rs
src/components/: ShortcutInput.tsx  SnackbarHost.tsx
src/components/todo/: DueDatePopover.tsx  ItemContextMenu.tsx  ListContextMenu.tsx  ListEditDialog.tsx  QuadrantView.tsx  TagPickerPopover.tsx  TodoBoardView.tsx  TodoCalendar.tsx  TodoDetail.tsx  TodoEditor.tsx  TodoEmoji.tsx  TodoHoverActionSlot.tsx  TodoIdlePaperOverlay.tsx  TodoItem.tsx  TodoPanel.tsx  TodoPomodoro.tsx  TodoQuickSearch.tsx  TodoSettingsView.tsx  TodoSidebar.tsx  TodoTimelineView.tsx  TodoWidgetWindow.tsx  flagEmoji.ts  index.ts  priority.ts  react-rotary-knob.d.ts  reactSvgmtCompat.ts  todoAssetDirectory.ts  todoCalendarDrag.ts  todoFonts.ts  todoIpc.ts  todoPomodoroEvents.ts  todoPomodoroTimer.ts  todoReminders.ts  types.ts  useTodoStore.ts
src/lib/: accelerator.ts  ipc.ts  timeZones.ts  todoColorThemes.ts
src/state/: store.ts
src/theme/: index.ts
