[package]
name = "ado"
version = "0.1.0"
description = "Ado"
authors = ["barrychen"]
edition = "2021"

[lib]
name = "ado_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1"
chrono = "0.4"
jieba-rs = "0.10.1"
once_cell = "1"
regex = "1"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_EnhancedStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61.2"

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 1
codegen-units = 1
incremental = false

[profile.release]
lto = true
codegen-units = 1
